# langchain-playground

./: .gitmodules
browser-use/: demo.py  save_hugging_face.py
cookbook/rewrite-retrieve-read/: baseline.py  rrr.py
learning-langchain-studyco/: 1.models.py  2.prompts.py  3.chain.py  3.chain2.py  4.indexes.py  README.md  qa.4.indexes.py  requirements.txt
rag-practice/: .gitignore  create_movimas_index.py  movimas_qa.py  pyproject.toml
