[project]
name = "rag-practice"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.2.17",
    "langchain-huggingface>=0.0.3",
    "langchain-openai>=0.1.25",
    "langchain<0.3",
    "tqdm>=4.66.5",
]
